--- a/server-nodeexpress/package.json
+++ b/server-nodeexpress/package.json
@@ -5,14 +5,15 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.14.0",
+    "glob": "^7.1.1",
     "handlebars": "^4.0.5"
   },
   "devDependencies": {
-    "nodemon": "^1.10.2"
+    "nodemon": "^1.11.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon --watch app.js --watch templates app.js"
+    "server": "nodemon --watch templates app.js"
   },
   "author": "",
   "license": "ISC"
