--- a/client/package-firebase.json
+++ b/client/package-firebase.json
@@ -13,9 +13,6 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.17.0",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.16.0",
     "bootstrap": "4.0.0-alpha.4",
     "browser-sync": "^2.14.3",
     "browser-sync-webpack-plugin": "^1.1.2",
@@ -28,8 +25,9 @@
     "webpack-dev-server": "^1.15.1"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0-alpha.4",
     "es6-promise": "^3.2.1",
-    "wolfy87-eventemitter": "^5.1.0"
+    "firebase": "^3.3.0"
+    "firebaseui": ?????
+  
   }
 }
