--- a/client/package.json
+++ b/client/package.json
@@ -19,17 +19,17 @@
     "bootstrap": "4.0.0-alpha.5",
     "browser-sync": "^2.14.3",
     "browser-sync-webpack-plugin": "^1.1.2",
-    "node-sass": "^3.8.0",
-    "npm-run-all": "^3.1.0",
-    "ts-loader": "^0.8.2",
+    "node-sass": "^4.1.1",
+    "npm-run-all": "^4.0.0",
+    "ts-loader": "^1.3.3",
     "typescript": "^2.0.0",
-    "typings": "^1.3.3",
+    "typings": "^2.1.0",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0-alpha.5",
-    "es6-promise": "^3.2.1",
+    "bootstrap": "4.0.0-alpha.5",
+    "es6-promise": "^4.0.5",
     "wolfy87-eventemitter": "^5.1.0"
   }
 }
